separate mouse hover style from keyboard navigation focus to prevent focus jumps when the popup opens under the mouse pointer, refs #72

--- a/quick-tabs/assets/styles-popup.css
+++ b/quick-tabs/assets/styles-popup.css
@@ -42,7 +42,6 @@ body {
   padding: 8px 5px 7px 5px;
   margin: 0;
   width: 100%;
-  border: 1px solid #cdcdcd;
   outline: none;
   border: none;
   border-bottom: 1px solid #4285f4;
@@ -95,6 +94,7 @@ div.hideicon {
   height: 25px;
 }
 
+div.open:hover div.close,
 div.withfocus.open div.close {
   display: inline;
   position: relative;
@@ -105,10 +105,9 @@ div.withfocus.open div.close {
 }
 
 div.close {
-  background-image: url(close.png);
+  background: url(close.png) no-repeat;
   background-size: 12px 12px;
-  background-repeat: no-repeat;
-	display: none;
+  display: none;
   height: 18px;
   width: 18px;
   cursor: pointer;
@@ -158,6 +157,14 @@ div.content {
   background: white;
 }
 
+.item:hover, .item:hover div.title, div.closed.item:hover div.title,
+.item:hover div.url {
+  background-color: #ff8732;
+  color: white;
+}
+
+.withfocus:hover, .withfocus:hover div.title, div.closed.withfocus:hover div.title,
+.withfocus:hover div.url,
 .withfocus, .withfocus div.title, div.closed.withfocus div.title,
 .withfocus div.url {
   background-color: #4285f4;
